# aesthetics_transfer_learning

./: ICI_100_test_sroccs.txt  LAPIS_PIAA_dataloader.py  LAPIS_histogram_dataloader.py  LAPIS_nima_ensemble.sh  LAVIS_PIAA_dataloader.py  LAVIS_histogram_dataloader.py  MIR_100_test_sroccs.txt  PARA_PIAA_dataloader.py  PARA_dataloader.py  PARA_histogram_dataloader.py  README.md  act_nngp.py  bhn.py  clip_nngp_PARA.py  compare_traitsample.py  compare_traitsample_lapis.py  compute_gini_index.py  compute_gini_index_lapis.py  convexhull_pca.py  data_config.yaml  environment.yml  gpdata_compress.py  kdd_linalg.py  nima_ensemble.sh  nngp.py  nngpll.py  nngpll_cls.py  pacmap_demo.py  para_rn_param_pca.py  para_rn_pca.py  piaa_emdloss_exp.py  plot_evaluation.py  pyproject.toml  run.sh  run_GIAA.sh  run_LAPIS_PIAA.sh  run_PARA_PIAA.sh  run_PARA_PIAA_torch2.sh  run_lapis_cv4.sh  run_para_cv4.sh  (+84 more)
bnn_code/: nngp.py  nngpll.py  nngpll_dup.py  train_histonet_gap_hyper.py  train_histonet_gap_hypergan.py  train_hypernet.py  train_resnet_dup.py  train_resnet_dup_emd.py  train_resnet_taskcls.py  train_resnet_uc.py  train_resnetll.py  train_resnetll_cls_uc.py  train_resnetll_uc_ensemble.py
fusion_code/: train_histonet.py  train_histonet_attr.py  train_histonet_attr_add.py  train_histonet_attr_crossattn.py  train_histonet_attr_gap.py  train_histonet_attr_noimg.py  train_histonet_attr_nopt_gap.py  train_histonet_attr_selfattn.py  train_histonet_attrmask.py  train_histonet_latefusion_inverse.py  train_histonet_latefusion_maxentropy.py  train_histonet_score2attr.py
gcn/: gcn.py  (+1 more)
(+40 files in other folders)
